# cratedb-xlens

./: .coverage  .dockerignore  .gitignore  .readthedocs.yml  AUTOEXEC_IMPLEMENTATION.md  CHANGES.md  Dockerfile  LICENSE  Makefile  QUERIES.md  README.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  pyproject.toml  run_tests.py  validate_rules.py
.github/: dependabot.yml
.github/workflows/: oci.yml  tests.yml
config/: shard_size_rules.yaml
deploy/: README.md
deploy/k8s/: cronjob.yaml
docs/: README.md  conf.py  index.md  maintenance-quick-reference.md  node-maintenance.md  oci.md  overview.md  read-check.md  sandbox.md  troubleshooting.md
docs/install/: configure.md  container.md  kubernetes.md  package.md
docs/maintenance/: analysis.md  index.md  quick-reference.md
docs/notes/: autoexec.md  index.md  queries.md
release/oci/: selftest.sh  test.yml
scripts/: test.sh
src/cratedb_xlens/: analyzer.py  cli.py  distribution_analyzer.py  shard_size_monitor.py  utils.py
src/cratedb_xlens/commands/: __init__.py  base.py  maintenance.py  operations.py
src/cratedb_xlens/commands/maintenance/: cli.py  node_maintenance.py
src/cratedb_xlens/commands/maintenance/problematic_translogs/: __init__.py  sql_generator.py
src/cratedb_xlens/formatting/: tables.py
src/xmover/: analyzer.py  cli.py  database.py  distribution_analyzer.py  shard_size_monitor.py  utils.py
src/xmover/commands/: analysis.py  diagnostics.py  maintenance.py  monitoring.py  operations.py
src/xmover/commands/maintenance/: __init__.py  base.py  cli.py  node_maintenance.py  shard_distribution.py
src/xmover/commands/maintenance/problematic_translogs/: autoexec.py  command.py  display.py
src/xmover/formatting/: __init__.py  console.py  progress.py
tests/: conftest.py  test_active_shard_monitor.py  test_adaptive_thresholds.py  test_autoexec.py  test_autoexec_cli.py  test_autoexec_functionality.py  test_autoexec_integration.py  test_check_maintenance.py  test_cli_commands.py  test_cli_commands_simple.py  test_command_validation.py  test_cratedb_500_error_scenarios.py  test_distribution_analyzer.py  test_enhanced_commands.py  test_enhanced_test_connection.py  test_master_node_symbol.py  test_node_metadata_handling.py  test_partition_bug_fixes.py  test_partition_commands_display.py  test_partition_distribution.py  test_partition_utils.py  test_problematic_translogs.py  test_recovery_monitor.py  test_watermark_utilities.py
