[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[project]
name = "xmover"
version = "0.0.0"
description = "CrateDB XLens looking-glass utility"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8,<9",
    "requests>=2.28,<3",
    "python-dotenv<2",
    "rich<14",
    "pyyaml<7",
    "loguru>=0.7,<1",
]

[project.scripts]
xmover = "xmover.cli:main"

[project.optional-dependencies]
dev = [
    "poethepoet<1",
    "pytest>=7,<8",
    "pytest-cov<8",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "partition: partition-related functionality tests",
    "safety: critical safety tests",
    "integration: integration tests",
]
