[build-system]
requires = ["uv_build>=0.8.9,<0.10.0"]
build-backend = "uv_build"

[project]
name = "cratedb-xlens"
version = "0.0.0"
description = "CrateDB XLens looking-glass utility"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "click>=8,<9",
    "requests>=2.28,<3",
    "python-dotenv<2",
    "rich<14",
    "pyyaml<7",
    "loguru>=0.7,<1",
]
keywords = [
    "cratedb",
    "administration",
    "analysis",
    "looking-glass",
    "shards",
    "sizing",
    "cluster",
]
authors = [
  { name = "The CrateDB Developers", email = "office@crate.io" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: SQL",
  "Topic :: Adaptive Technologies",
  "Topic :: Communications",
  "Topic :: Database",
  "Topic :: Documentation",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Pre-processors",
  "Topic :: Software Development :: Testing",
  "Topic :: System :: Archiving",
  "Topic :: System :: Benchmark",
  "Topic :: System :: Clustering",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]

[project.scripts]
xmover = "cratedb_xlens.cli:main"

[project.optional-dependencies]
dev = [
    "poethepoet<1",
    "pytest>=7,<8",
    "pytest-cov<8",
]
docs = [
    "furo>=2024",
    "myst-parser[linkify]>=0.18,<4",
    "sphinx-autobuild>=2024",
    "sphinx-copybutton",
    "sphinx-design-elements<1",
    "sphinxcontrib-mermaid<2",
    "sphinxext-opengraph<1",
]

[project.urls]
Changelog = "https://cratedb-xlens.readthedocs.io/changes.html"
Documentation = "https://cratedb-xlens.readthedocs.io/"
Issues = "https://github.com/crate-workbench/cratedb-xlens/issues"
Repository = "https://github.com/crate-workbench/cratedb-xlens"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
addopts = [
    "-rA",
    "--strict-markers",
    "--strict-config",
    "--verbosity=3",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-branch",
]
log_level = "DEBUG"
log_cli_level = "DEBUG"
log_format = "%(asctime)-15s [%(name)-24s] %(levelname)-8s: %(message)s"
minversion = "2.0"
testpaths = [
  "tests",
]
xfail_strict = true
markers = [
    "partition: partition-related functionality tests",
    "safety: critical safety tests",
    "integration: integration tests",
]

[tool.poe.tasks]

docs-autobuild = [
  { cmd = "sphinx-autobuild --open-browser --watch src docs docs/_build" },
]
docs-html = [
  { cmd = "sphinx-build -W --keep-going docs docs/_build" },
]
docs-linkcheck = [
  { cmd = "sphinx-build -W --keep-going -b linkcheck docs docs/_build" },
]
